force-app/main/default/objects/KimbleOne__UserPermission__c/KimbleOne__UserPermission__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>User Permission</label>
    <nameField>
        <label>UserPermission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserPermissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>