force-app/main/default/objects/KimbleOne__UserPermission__c/fields/KimbleOne__Permission__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Permission__c</fullName>
    <label>Permission</label>
    <referenceTo>KimbleOne__Permission__c</referenceTo>
    <relationshipLabel>UserPermissions</relationshipLabel>
    <relationshipName>UserPermissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>